--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-laundry",
+  "name": "Pawsitively",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,11 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-calendar": "^5.0.0",
+    "react-datetime-picker": "^6.0.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-time-picker": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
